2010-03-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Initialize new MT-alpha back-end `ppp2'.

	* tools/bin/cce.in: Recognize `ppp2'.

	* tools/bin/spp (ppp2alpha): Initialize new target class.

	* tools/lib/t-pppalpha/slimpl.m4,
	* tools/lib/t-pppalpha/include/sl_support.h: Copy to...

	* tools/lib/t-ppp2alpha/slimpl.m4,
	* tools/lib/t-ppp2alpha/include/sl_support.h: ... here.

2010-03-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the MT-alpha back-end.

	* tools/lib/t-pppalpha/include/sl_support.h: Implement a new
	"write-to-shared" macro that forces the value to be present
	in a temporary before it is written to the shared register.

	* tools/bin/slc.in: New option `-fwesley' that enables the new
	handling of shared parameters.

	* tools/bin/spp: New filter that ensures that `mov' instructions
	operating on floating point registers are renamed to fmov.

2010-03-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update documentation.

	* doc/HACKING.txt: Reflect latest ChangeLog practices.

2010-02-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* tools/lib/Makefile.am (nobase_dist_pkgdata_DATA): List the new
	profiles.

2010-02-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Remove support for `slr -C', now replaced by `slr -m'.

	"Forcing COMA" makes no sense when there are multiple
	COMA implementations available. Let profiles select.

	* tools/bin/slr.in,
	* tools/lib/r-mt-sim.sh.in: Drop support for `-C', `-Cc' and
	`-Cd'.

	* tools/lib/mt-profiles/lzcoma_default,
	* tools/lib/mt-profiles/mlcoma_default: New.

	* build-aux/slctests.mk: Use the new COMA profiles for testing.

2010-02-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fix to `slr'.

	* tools/lib/r-mt-sim.sh.in: Silence program initialization for
	recursive calls.

2010-02-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend simulator profiles.

	* tools/lib/mt-profiles/coma128: Symlink to...
	* tools/lib/mt-profiles/lzcoma128_2chan: ...here. Fix sizes and timings.
